tester/testsuite/good/stack1.jl
void foo()
{
    int x01 = 1;
    int x02 = 2;
    int x03 = 3;
    int x04 = 4;
    int x05 = 5;
    int x06 = 6;
    int x07 = 7;
    int x08 = 8;
    int x09 = 9;
    int x10 = 10;
}

void bar()
{
    int x01;
    int x02;
    int x03;
    int x04;
    int x05;
    int x06;
    int x07;
    int x08;
    int x09;
    int x10;
    printInt(x01);
    printInt(x02);
    printInt(x03);
    printInt(x04);
    printInt(x05);
    printInt(x06);
    printInt(x07);
    printInt(x08);
    printInt(x09);
    printInt(x10);
}

int main()
{
    foo();
    bar();
    return 0;
}
