tester/testsuite/bad/assignedfunction.jl
int obj() {
    return 0;
}

int lol() {
    return 10;
}

int main() {

    obj = lol;

    return 0;
}